SF-2789 Fix paratext login button content misaligned (#2524)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/settings/settings.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/settings/settings.component.scss
@@ -87,9 +87,7 @@ mat-icon {
   margin-left: 24px;
 
   .paratext-logo {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
+    width: 100%;
   }
 
   > .more-options {
